// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MicroFrontend / MicroFrontend Main 1`] = `
<div
  className="rs"
>
  <div
    id="micro-frontend-root-sample"
  />
</div>
`;

exports[`Storyshots MicroFrontend / MicroFrontend Multiple Frontends 1`] = `
<div
  className="rs"
>
  <div
    id="micro-frontend-root-sample1"
  />
  <div
    id="micro-frontend-root-sample2"
  />
</div>
`;
